# OpenTLD

./: CMakeLists.txt  README.md  cmake
src/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/: CMakeLists.txt  cmake
src/libopentld/tld/: DetectionResult.h  DetectorCascade.cpp  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  MedianFlowTracker.h  TLD.cpp  TLDUtil.cpp  TLDUtil.h  VarianceFilter.h
src/mftracker/: BB.cpp  BB.h  BBPredict.cpp  BBPredict.h  FBTrack.cpp  FBTrack.h  Lk.cpp  Lk.h  Median.cpp
src/opentld/: CMakeLists.txt
src/opentld/main/: Main.cpp
src/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  MedianFlowTracker.cpp  MedianFlowTracker.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
